<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lookup">

    <fragment
        android:id="@+id/nav_lookup"
        android:name="com.example.menutest.ui.itemLookup.itemLookupFragment"
        android:label="@string/menu_lookup"
        tools:layout="@layout/fragment_lookup_item" />

    <fragment
        android:id="@+id/nav_updateItem"
        android:name="com.example.menutest.ui.itemUpdate.itemUpdateFragment"
        android:label="@string/menu_update"
        tools:layout="@layout/fragment_update" />

    <fragment
        android:id="@+id/nav_listAll"
        android:name="com.example.menutest.ui.listAll.listAllFragment"
        android:label="@string/menu_listAll"
        tools:layout="@layout/fragment_list_all" />

    <fragment
        android:id="@+id/nav_addItem"
        android:name="com.example.menutest.ui.addItem.addItemFragment"
        android:label="@string/menu_addItem"
        tools:layout="@layout/fragment_add_item" />

    <fragment
        android:id="@+id/nav_removeItem"
        android:name="com.example.menutest.ui.removeItem.removeItemFragment"
        android:label="@string/menu_removeItem"
        tools:layout="@layout/fragment_remove_item" />

</navigation>