<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addItem.addItemFragment">

    <TextView
        android:id="@+id/text_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/button_add_item"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:backgroundTint="#FA9E9E"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753" />


    <EditText
        android:id="@+id/text_add_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FA9E9E"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:hint="@string/text_item_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <EditText
        android:id="@+id/text_add_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FA9E9E"
        android:ems="10"
        android:hint="@string/text_item_price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <EditText
        android:id="@+id/text_add_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FA9E9E"
        android:ems="10"
        android:hint="@string/text_item_quantity"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:layout_constraintBottom_toTopOf="@+id/button_add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824">

        <EditText
            android:id="@+id/text_add_item_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FA9E9E"
            android:ems="10"
            android:hint="@string/text_UPC"
            android:inputType="number"
            android:maxLength="12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.686" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/text_add_item_dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FA9E9E"
        android:ems="10"
        android:hint="@string/text_dept"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086">

        <EditText
            android:id="@+id/text_add_item_id"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="#FA9E9E"
            android:ems="10"
            android:hint="@string/text_id"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>